fixed firefox layout shifts

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -31,6 +31,7 @@
 }
 
 .HeroSectionContainer {
+  user-select: none;
   font-family: var(--font-source-code-pro), Consolas, Monaco, 'Andale Mono',
     'Ubuntu Mono', monospace;
   font-weight: 900;
